--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "ks-noddy",
+  "name": "vamp-kmt",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "index-cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "MIT",
+  "bin": {
+    "vamp-kmt": "index-cli.js"
+  },
+  "author": "jason@vamp.io",
+  "license": "Apache 2",
   "dependencies": {
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.1",
-    "jsonnet": "^0.5.0-beta",
     "readline-promise": "^1.0.3",
     "replace-in-file": "^3.4.3",
     "semver": "^5.6.0"
