--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.1",
+    "klaw-sync": "^6.0.0",
     "readline-promise": "^1.0.3",
     "replace-in-file": "^3.4.3",
     "semver": "^5.6.0"
